--- a/NeutralNews/web.config
+++ b/NeutralNews/web.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name ="DBCS" connectionString="Data Source=DESKTOP-HDHL31A\SQLEXPRESS;Initial Catalog=MyNeutralNews;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;" providerName="System.Data.SqlClient"/>
+    <add name ="DBCS" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-HDHL31A\SQLEXPRESS;Initial Catalog=MyNeutralNews;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=Read;MultiSubnetFailover=False;" />
   </connectionStrings>
 </configuration>
