Upload connection string commit

--- a/NeutralNews/web.config
+++ b/NeutralNews/web.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>
-    <add name ="DBCS" connectionString="Data Source=LAPTOP132511\SQLEXPRESS;Initial Catalog=MyNeutralNews;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;" providerName="System.Data.SqlClient"/>
-  </connectionStrings>
+    <connectionStrings>
+      <add name ="DBCS" 
+           connectionString="Data Source=LAPTOP132511\SQLEXPRESS;Initial Catalog=MyNeutralNews;Integrated Security=True;Encrypt=False;Trusted_Connection=Yes;" 
+           providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
