--- a/NeutralNews/appsettings.json
+++ b/NeutralNews/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=DESKTOP-HDHL31A\\SQLEXPRESS;Database=MyNeutralNews;Integrated Security=SSPI;"
+  }
+
 }
