Connection String working and Upload function working

--- a/NeutralNews/appsettings.json
+++ b/NeutralNews/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=LAPTOP132511\\SQLEXPRESS;Initial Catalog=MyNeutralNews;Integrated Security=True"
+  }
 }
